[TNOV-75] Fixed spacing and alignment for discussion container elements.

--- a/frontend/src/Comment/UserComment.css
+++ b/frontend/src/Comment/UserComment.css
@@ -1,7 +1,7 @@
 .userCommentContainer {
   display: flex;
   align-items: flex-start;
-  margin-right: auto;
+  margin-right: 1em;
   max-width: 75px;
 }
   
@@ -14,7 +14,7 @@
 }
   
 .userNameComment {
-  margin-right: auto;
+  margin-right: 1em;
   font-size: 12pt;
   font-weight: bold;
 }
